update album settings